add products and category api
