# src/contexts/shared/infrastructure/swagger/schema.ts
@@ -16,8 +16,16 @@ const LoginUserSchema = {
 const CreateCategorySchema = {
     $name : "Electronics",
 }
+
+const CreateProductSchema = {
+    $name : "Electronics",
+    $price : "Electronics",
+    $description : "Electronics",
+    $category_id : ["CD89F481-5369-4778-9507-CFC7039F76B7", "8615D8B8-2E57-4D23-AE1E-F7A1E94C8D0A"]
+}
 export const Schemas = {
     CreateUserSchema,
     LoginUserSchema,
-    CreateCategorySchema
+    CreateCategorySchema,
+    CreateProductSchema
 }
